--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'com.google.cloud.tools.jib' version '3.4.2'
 }
 
 group = 'voyage'
@@ -30,10 +31,42 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// QueryDSL
+	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+def dockerhubUsername = System.getenv("DOCKERHUB_USERNAME") ?: ""
+def dockerhubPassword = System.getenv("DOCKERHUB_PASSWORD") ?: ""
+def targetImageName = System.getenv("IMAGE_NAME") ?: ""
+
+jib {
+	from {
+		image = "eclipse-temurin:17-jre"
+		auth {
+			username = dockerhubUsername
+			password = dockerhubPassword
+		}
+	}
+	to {
+		image = targetImageName
+		auth {
+			username = dockerhubUsername
+			password = dockerhubPassword
+		}
+	}
+	container {
+		jvmFlags = ["-Dspring.profiles.active=prod"]
+		creationTime = "USE_CURRENT_TIMESTAMP"
+	}
 }
